--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
         <div class="navbar-collapse collapse" id="collapseNavbar">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
+              <a class="nav-link" href="#/profile">Profile</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#/logout">Logout</a>
             </li>
           </ul>
